flights/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: flights-soh-re-destinationrule
spec:
  host: flights.soh.re
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
